# caseproof-ai-agenthack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
caseproof/: __init__.py  cli.py  maestro_adapter.py  validator.py
demo/: index.html
docs/: CLAIM_CEILING.md  CaseProof_AI_AgentHack_Deck_Draft.pptx  CaseProof_AI_AgentHack_Required_Template_Deck.pptx  DEMO_VIDEO_SCRIPT.md  EXTERNAL_URL_BINDING.md  FINAL_DEVPOST_FIELDS.md  FINAL_UPLOAD_ASSET_INDEX.md  GITHUB_UPLOAD_PACKET.md  JUDGING_RESPONSE_MATRIX.md  MAESTRO_CASE_FLOW.md  ONE_PAGE_REVIEWER_SUMMARY.md  PRESENTATION_DECK_DRAFT.md  PUBLIC_PRIVATE_BOUNDARY.md  REVIEWER_QUICKSTART.md  SUBMISSION_CHECKLIST.md  UIPATH_COMPONENTS.md  final_pre_submit_check.json  review_package_receipt.json
docs/assets/: caseproof_video_frames.txt
fixtures/: allow_review_refund_case.json  block_policy_bypass.json  block_stage_skip.json  hold_missing_evidence.json
receipts/: allow_review_refund_case_receipt.json  block_policy_bypass_receipt.json  block_stage_skip_receipt.json  demo_receipt_index.json  hold_missing_evidence_receipt.json
scripts/: build_deck.py  build_review_package.py  final_pre_submit_check.py  generate_demo_assets.py  generate_video_rough_cut.py  run_demo.py  secret_scan.py
tests/: test_maestro_adapter.py  test_validator.py
uipath/: MAESTRO_CASE_BLUEPRINT.md  STUDIO_WEB_WORKFLOW_RECIPE.md  maestro_case_handoff_template.json
