[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caseproof-ai-agenthack"
version = "0.1.0"
description = "Public-safe case governance validator for UiPath Maestro AgentHack"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Isometric-Architect"}]

[tool.setuptools]
packages = ["caseproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
